feat: Add Biological Classification chapter with 14 animations

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <div class="logo">
+                <a href="landing.html" class="back-link" title="Back to chapters">←</a>
                 <span class="logo-icon">⚡</span>
                 <div>
                     <h1>PhysicsViz</h1>
